--- a/SwiftNews/ImageTitleTableViewCell.xib
+++ b/SwiftNews/ImageTitleTableViewCell.xib
@@ -8,18 +8,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="191" id="bh6-Xi-aVo" customClass="ImageTitleCell" customModule="SwiftNews" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="191" id="bh6-Xi-aVo" customClass="ImageTitleTableViewCell" customModule="SwiftNews" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="496" height="191"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bh6-Xi-aVo" id="J2J-eV-9As">
                 <rect key="frame" x="0.0" y="0.0" width="496" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EgZ-vb-rp3">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EgZ-vb-rp3">
                         <rect key="frame" x="0.0" y="0.0" width="496" height="191"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZY-WF-W4B">
-                        <rect key="frame" x="20" y="85" width="456" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="laksdfjklasdfjklasdjfklasdjfklasdjflkasdjfklsadjfkladsjflksdajfkjsadklfjdsaklfdsaf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZY-WF-W4B">
+                        <rect key="frame" x="20" y="75" width="456" height="41"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -30,8 +30,8 @@
                     <constraint firstItem="EgZ-vb-rp3" firstAttribute="top" secondItem="J2J-eV-9As" secondAttribute="top" id="1eY-c1-03B"/>
                     <constraint firstItem="mZY-WF-W4B" firstAttribute="leading" secondItem="J2J-eV-9As" secondAttribute="leadingMargin" id="3Ll-qZ-QYv"/>
                     <constraint firstItem="EgZ-vb-rp3" firstAttribute="leading" secondItem="J2J-eV-9As" secondAttribute="leading" id="4c1-dy-fIM"/>
-                    <constraint firstItem="mZY-WF-W4B" firstAttribute="centerY" secondItem="J2J-eV-9As" secondAttribute="centerY" id="FzG-tq-Rvg"/>
                     <constraint firstAttribute="trailingMargin" secondItem="mZY-WF-W4B" secondAttribute="trailing" id="NM6-Yv-hL7"/>
+                    <constraint firstItem="mZY-WF-W4B" firstAttribute="centerY" secondItem="J2J-eV-9As" secondAttribute="centerY" id="OHE-b2-8a6"/>
                     <constraint firstAttribute="trailing" secondItem="EgZ-vb-rp3" secondAttribute="trailing" id="k8Q-g6-GY3"/>
                 </constraints>
             </tableViewCellContentView>
