--- a/SwiftNews/Base.lproj/Main.storyboard
+++ b/SwiftNews/Base.lproj/Main.storyboard
@@ -18,6 +18,42 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="r13-j2-8oV">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageTitleTableViewCell" id="Sx8-Ua-MeR" customClass="ImageTitleTableViewCell" customModule="SwiftNews" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="172.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Sx8-Ua-MeR" id="ybC-w7-5En">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="172.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="UlI-bj-EdB">
+                                                    <rect key="frame" x="20" y="11" width="374" height="150.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aqa-yI-iWo">
+                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yzw-jj-mEs">
+                                                            <rect key="frame" x="0.0" y="20.5" width="374" height="130"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="UlI-bj-EdB" secondAttribute="bottom" id="KKn-nj-OxS"/>
+                                                <constraint firstItem="UlI-bj-EdB" firstAttribute="top" secondItem="ybC-w7-5En" secondAttribute="topMargin" id="Pxe-cl-nO4"/>
+                                                <constraint firstItem="UlI-bj-EdB" firstAttribute="leading" secondItem="ybC-w7-5En" secondAttribute="leadingMargin" id="QcW-7I-fhI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="UlI-bj-EdB" secondAttribute="trailing" id="h1p-m7-pgE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="thumbnailView" destination="yzw-jj-mEs" id="U7q-qi-zRO"/>
+                                            <outlet property="titleLabel" destination="aqa-yI-iWo" id="4mw-Wx-qy4"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="LNs-jt-IBQ"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="TcT-DZ-nU0"/>
